# sysmonitor

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Dockerfile.agent  Dockerfile.aggregator  README.md  build.sh  docker-compose.yml  test_aggregator_wrapper.py
.github/workflows/: build-and-test.yml  ci.yml  release.yml
config/: agent.yaml.example  alerts.yaml.example  sysmon.yaml.example
docs/: API.md  CLI-REFERENCE.md  FINAL-REPORT.md  FRONTEND-WALKTHROUGH.md  IMPLEMENTATION-COMPLETE.md  PROJECT-COMPLETE.md  PROJECT_SUMMARY.md  TROUBLESHOOTING.md  WEEK6-FINAL-REPORT.md  WEEK6-IMPLEMENTATION-COMPLETE.md  WEEK8-IMPLEMENTATION-COMPLETE.md  roadmap-weeks-5-8.md  week3-summary.md  week4-summary.md  week5-architecture.md  week5-cli-summary.md  week5-implementation.md  week5-plan.md  week5-quickstart.md  week5-summary.md  week6-quickstart.md  week6-summary.md  week7-code-examples.md  week7-implementation.md  week7-quickstart.md  week7-summary.md  week8-summary.md
docs/architecture/: system-design.md
docs/deployment/: docker.md  kubernetes.md  production-checklist.md  systemd.md
docs/requirements/: SRS.md
include/sysmon/: agent_config.hpp  alert_config.hpp  alert_manager.hpp  metrics_storage.hpp  network_publisher.hpp  platform_interface.hpp  service_discovery.hpp
python/: requirements-ml.txt  requirements.txt
python/sysmon/: __init__.py
python/sysmon/aggregator/: __init__.py  __main__.py  auth.py  server.py  storage.py
python/sysmon/api/: dashboard-ml.html  dashboard-multi.html  main.py  server.py
python/sysmon/discovery/: __init__.py  consul_client.py  mdns_service.py
python/sysmon/ml/: __init__.py  anomaly_detector.py  baseline_learner.py  models.py
python/sysmon/storage/: __init__.py  database.py  query_api.py
scripts/: demo-complete.sh  demo-discovery.sh  demo-distributed.sh  demo-ml.sh  demo_week4.sh  generate-certs.sh  push-test-data.py  start-aggregator.sh  start.sh  stop.sh  test-discovery.py  test_ml.py  test_python_storage.py
src/bindings/: .gitkeep
src/cli/: CMakeLists.txt  main.cpp
src/collectors/: .gitkeep
src/core/: CMakeLists.txt  agent_config.cpp  alert_config.cpp  alert_manager.cpp  metrics_collector.cpp  metrics_collector.hpp  network_publisher.cpp  platform_factory.cpp  service_discovery.cpp
src/daemon/: CMakeLists.txt  main.cpp
src/platform/: CMakeLists.txt
src/platform/linux/: CMakeLists.txt  linux_process_monitor.cpp  linux_system_metrics.cpp
src/platform/macos/: CMakeLists.txt  macos_process_monitor.cpp  macos_system_metrics.cpp
src/platform/windows/: CMakeLists.txt  windows_process_monitor.cpp  windows_system_metrics.cpp
src/storage/: .gitkeep  CMakeLists.txt  metrics_storage.cpp  retention_manager.cpp
src/utils/: .gitkeep  http_client.cpp  http_client.hpp
tests/: CMakeLists.txt  conftest.py  test_aggregator.py  test_alert_manager.cpp  test_basic.py  test_metrics_collector.cpp  test_metrics_storage.cpp  test_ml.py  test_network_publisher.cpp  test_platform_metrics.cpp  test_storage.py
tests/data/: README.md
tests/integration/: test_alerts.sh  test_distributed.sh  test_full_pipeline.sh
tests/load/: test_aggregator_load.py
